Adds pages with headers and footers + imgs

--- a/themes.html
+++ b/themes.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
 
-    <title>Kevin's Balloons</title>
+    <title>Themed Balloon Decorations</title>
 </head>
 
 <body>
@@ -20,11 +20,11 @@
     <nav class="navbar navbar-expand-sm navbar-dark p-0 sticky-top "> 
         <div class="container-fluid">
             <ul class="mx-auto nav-list pt-0 pt-sm-3 ">
-                <li><a class="nav-link active " href="services.html">Services</a></li>
-                <li><a class="nav-link active d-none d-sm-block" href="book.html">Book</a></li>
-                <li><a class="nav-link active" href="index.html" class="navbar-brand"><img src="img/KBlogo.png" alt="Kevin's Balloons logo" width="100" height="100"></a></li>
-                <li><a class="nav-link active d-none d-sm-block" href="blog.html">Blog</a></li>
-                <li><a class="nav-link active " href="contact.html">Contact</a></li>
+                <li><a class="nav-link active" href="services.html">Services</a></li>
+                <li><a class="nav-link d-none d-sm-block" href="book.html">Book</a></li>
+                <li><a class="nav-link" href="index.html" class="navbar-brand"><img src="img/KBlogo.png" alt="Kevin's Balloons logo" width="100" height="100"></a></li>
+                <li><a class="nav-link d-none d-sm-block" href="blog.html">Blog</a></li>
+                <li><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
            
         </div>
@@ -38,18 +38,10 @@
             <h1>Kevin's Balloons</h1>
             <p>San Francisco's Globally-Demanded Balloon Artist</p>
         </div>
-    
-        <div class="service-display position-absolute">
-            <img class="first" src="img/servicecarousel-arch.png" alt="Kevin can make balloon arches">
-            <img class="second" src="img/servicecarousel-garland.png" alt="Kevin can make balloon garlands">
-            <img class="third" src="img/servicecarousel-theme.png" alt="Kevin can decorated Themed Parties">
-            <img class="fourth" src="img/servicecarousel-twist.png" alt="Kevin is the top balloon twister in San Francisco">
-        </div>
     </div>
 
 
-    <!-- FAB -->
-    <button class="fab btn d-sm-none" href="book.html"> Book <span>Kevin</span> Now </button>
+
 
 
     <!-- Page Content -->
