Finishes index.html

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     <!-- header -->
     <div class="container-fluid header-img ">
         <div class="overlay container-fluid ">
-            <h1>Kevin's Balloons</h1>
+            <h1>Contact</h1>
             <p>San Francisco's Globally-Demanded Balloon Artist</p>
         </div>
     
@@ -43,12 +43,26 @@
     </div>
 
 
-    <!-- FAB -->
-    <button class="fab btn d-sm-none" href="book.html"> Book <span>Kevin</span> Now </button>
-
-
     <!-- Page Content -->
-    <br>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-4 contact-box">
+                <i class="fa fa-envelope text-info"></i>
+                <h2>Email</h2>
+                <h6>kevinsballoons@gmail.com</h6>
+            </div>
+            <div class="col-4 contact-box">
+                <i class="fa fa-instagram text-info"></i>
+                <h2>Instagram</h2>
+                <h6>@kevins.balloons</h6>
+            </div>
+            <div class="col-4 contact-box">
+                <i class="fa fa-book text-info"></i>
+                <h2>Book Kevin</h2>
+                <h6>for your event!</h6>
+            </div>
+        </div>
+    </div>
 <br>
 <br>
 <br>
@@ -58,13 +72,6 @@
 <br>
 <br>
 <br>
-<br>
-<div class="service-display position-absolute">
-    <img class="first" src="img/servicecarousel-arch.png" alt="Kevin can make balloon arches">
-    <img class="second" src="img/servicecarousel-garland.png" alt="Kevin can make balloon garlands">
-    <img class="third" src="img/servicecarousel-theme.png" alt="Kevin can decorated Themed Parties">
-    <img class="fourth" src="img/servicecarousel-twist.png" alt="Kevin is the top balloon twister in San Francisco">
-</div>
 <br>
 <br>
 <br>
@@ -118,7 +125,7 @@
                             </div>
                             <button class="subscribe btn orange text-white mb-2" type="submit">Submit</button>
                         </form>
-                        <button class="btn teal col mx-auto btn-lg mb-2 booking-btn">Book Kevin</button>
+                        <button class="btn col mx-auto btn-lg mb-2 booking-btn"><a href="book.html">Book Kevin Now</a></button>
                     </div>
                 </div>
 
