--- a/services.html
+++ b/services.html
@@ -33,50 +33,82 @@
 
 
     <!-- header -->
-    <div class="container-fluid header-img ">
+    <div class="container-fluid service-header-img ">
         <div class="overlay container-fluid ">
-            <h1>Kevin's Balloons</h1>
-            <p>San Francisco's Globally-Demanded Balloon Artist</p>
+            <h1>Services</h1>
+            <p>Beyond Balloon Twisting</p>
         </div>
-    
-        <div class="service-display position-absolute">
-            <img class="first" src="img/servicecarousel-arch.png" alt="Kevin can make balloon arches">
-            <img class="second" src="img/servicecarousel-garland.png" alt="Kevin can make balloon garlands">
-            <img class="third" src="img/servicecarousel-theme.png" alt="Kevin can decorated Themed Parties">
-            <img class="fourth" src="img/servicecarousel-twist.png" alt="Kevin is the top balloon twister in San Francisco">
-        </div>
-    </div>
+
 
 
     <!-- FAB -->
-    <button class="fab btn d-sm-none" href="book.html"> Book <span>Kevin</span> Now </button>
+    <button type="button" class="fab btn d-sm-none"><a href="book.html"> Book <span>Kevin</span> Now </a></button>
 
 
     <!-- Page Content -->
-    <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+    <div class="container-fluid yellow">
+        <div class="container teal justify-content-center">
+           
+            <div class="row service-row ser-yel pt-3">
+                <div class="col-4 p-0 justify-content-center d-flex">
+                    <a href="arches.html">
+                        <img src="img/archpinkblue-sq.jpg" alt="" class="service-img">
+                    </a>
+                </div>
+                <div class="col-8 service-text">
+                    <h6>Arches</h6>
+                    <p> Customized balloon arches of any size and specifications.</p>
+                    <p class="d-none d-sm-block"> Customize your arch yourself, and Kevin will have it ready for your
+                        event, exactly as you want it. <a href="arches.html">learn more</a>
+                    </p>
+                </div>
+            </div>
 
+            <div class="row service-row ser-or ">
+                <div class="col-8 service-text">
+                    <h6>Themed Parties</h6>
+                    <p> Get your event decked out in custom, themed balloon decor</p>
+                    <p class="d-none d-sm-block">Design the decor yourself, or have Kevin design it for you. <a
+                            href="themes.html">learn more</a>
+                    </p>
+                </div>
+                <div class="col-4 p-0 justify-content-center d-flex">
+                    <a href="themes.html">
+                        <img src="img/theme-mermaid-sq.jpg" alt="" class="service-img">
+                    </a>
+                </div>
+            </div>
+
+            <div class="row service-row ser-yel  ">
+                <div class="col-4 p-0 justify-content-center d-flex">
+                    <a href="garlands.html">
+                        <img src="img/garland-girl.jpg" alt="" class="service-img">
+                    </a>
+                </div>
+                <div class="col-8 service-text">
+                    <h6>Garlands</h6>
+                    <p> Give your event that extra pizazz!</p>
+                    <p class="d-none d-sm-block"> Get a single garland or dozens <a href="garlands.html">learn more</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="row service-row ser-or ">
+                <div class="col-8 service-text">
+                    <h6>Balloon Twisting</h6>
+                    <p> Kevin is a world-renowned balloon twister, capable to turning almost any idea into a balloon
+                        sculpture</p>
+                    <p class="d-none d-sm-block"> <a href="book.html">learn more</a>
+                    </p>
+                </div>
+                <div class="col-4 p-0 justify-content-center d-flex mb-3">
+                    <a href="book.html">
+                        <img src="img/kev-bike-sq.png" alt="" class="service-img">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container-fluid footer-ad">
         <!-- Marquee -->
@@ -117,7 +149,7 @@
                             </div>
                             <button class="subscribe btn orange text-white mb-2" type="submit">Submit</button>
                         </form>
-                        <button class="btn teal col mx-auto btn-lg mb-2 booking-btn">Book Kevin</button>
+                        <button class="btn col mx-auto btn-lg mb-2 booking-btn"><a href="book.html">Book Kevin Now</a></button>
                     </div>
                 </div>
 
