--- a/themes.html
+++ b/themes.html
@@ -35,7 +35,7 @@
     <!-- header -->
     <div class="container-fluid header-img ">
         <div class="overlay container-fluid ">
-            <h1>Kevin's Balloons</h1>
+            <h1>Themed Party Decor</h1>
             <p>San Francisco's Globally-Demanded Balloon Artist</p>
         </div>
     </div>
@@ -109,7 +109,7 @@
                             </div>
                             <button class="subscribe btn orange text-white mb-2" type="submit">Submit</button>
                         </form>
-                        <button class="btn teal col mx-auto btn-lg mb-2 booking-btn">Book Kevin</button>
+                        <button class="btn col mx-auto btn-lg mb-2 booking-btn"><a href="book.html">Book Kevin Now</a></button>
                     </div>
                 </div>
 
