--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
     <!-- header -->
     <div class="container-fluid header-img ">
         <div class="overlay container-fluid ">
-            <h1>Kevin's Balloons</h1>
+            <h1>Balloon Blog</h1>
             <p>San Francisco's Globally-Demanded Balloon Artist</p>
         </div>
     
@@ -44,7 +44,7 @@
 
 
     <!-- FAB -->
-    <button class="fab btn d-sm-none" href="book.html"> Book <span>Kevin</span> Now </button>
+    <button type="button" class="fab btn d-sm-none"><a href="book.html"> Book <span>Kevin</span> Now </a></button>
 
 
     <!-- Page Content -->
@@ -118,7 +118,7 @@
                             </div>
                             <button class="subscribe btn orange text-white mb-2" type="submit">Submit</button>
                         </form>
-                        <button class="btn teal col mx-auto btn-lg mb-2 booking-btn">Book Kevin</button>
+                        <button class="btn col mx-auto btn-lg mb-2 booking-btn"><a href="book.html">Book Kevin Now</a></button>
                     </div>
                 </div>
 
